--- a/11-Web-Design-Challenge/index.html
+++ b/11-Web-Design-Challenge/index.html
@@ -14,12 +14,12 @@
 <body>
   <nav class="navbar navbar-expand-sm bg-light navbar-light">
     <!-- Brand -->
-    <a class="navbar-brand" href="#" style="background-color:#008080; color:white; padding: 10px;">Latitude</a>
+    <a class="navbar-brand" href="#" style="background-color:#008080; color:white; padding: 8px;">Latitude</a>
   
 
   
       <!-- Dropdown -->
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
           Plot
@@ -53,12 +53,12 @@
       <hr>
       <br>
       <img src="Resources\assets\images\Fig1.png" class="img1" alt="latitude vs X">
-      <p>The purpose of this project was to analyse how weather changes as we get closer to equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
+      <p style="color: black;">The purpose of this project was to analyse how weather changes as we get closer to equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
       </p>
 
       <br>
 
-      <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude.
+      <p style="color: black;">After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude.
           factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as 
           part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.
       </p>
